[package]
name = "TornBot2"
version = "0.1.0"
authors = ["John C. Allwein <git@johnnyapol.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serenity = "0.9"
table-extract = "0.2.2"